// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`content 1 should change correctly 1`] = `
<div>
  <div
    class="HW12"
  >
    <div
      class="tag-name choice"
    >
      tag1
    </div>
    <div
      class="tag-name"
    >
      tag2
    </div>
    <div
      class="tag-name"
    >
      tag3
    </div>
    <div
      class="tag-name"
    >
      tag4
    </div>
    <div
      class="content"
    >
      lorem 1
    </div>
  </div>
</div>
`;

exports[`content 2 should change correctly 1`] = `
<div>
  <div
    class="HW12"
  >
    <div
      class="tag-name"
    >
      tag1
    </div>
    <div
      class="tag-name choice"
    >
      tag2
    </div>
    <div
      class="tag-name"
    >
      tag3
    </div>
    <div
      class="tag-name"
    >
      tag4
    </div>
    <div
      class="content"
    >
      lorem 2
    </div>
  </div>
</div>
`;

exports[`content 3 should change correctly 1`] = `
<div>
  <div
    class="HW12"
  >
    <div
      class="tag-name"
    >
      tag1
    </div>
    <div
      class="tag-name"
    >
      tag2
    </div>
    <div
      class="tag-name choice"
    >
      tag3
    </div>
    <div
      class="tag-name"
    >
      tag4
    </div>
    <div
      class="content"
    >
      lorem 3
    </div>
  </div>
</div>
`;

exports[`content 4 should change correctly 1`] = `
<div>
  <div
    class="HW12"
  >
    <div
      class="tag-name"
    >
      tag1
    </div>
    <div
      class="tag-name"
    >
      tag2
    </div>
    <div
      class="tag-name"
    >
      tag3
    </div>
    <div
      class="tag-name choice"
    >
      tag4
    </div>
    <div
      class="content"
    >
      lorem 4
    </div>
  </div>
</div>
`;
